fix scrollbar of card group

--- a/src/css/abstracts/_variables.scss
+++ b/src/css/abstracts/_variables.scss
@@ -12,4 +12,6 @@
   --color-bg-orange: #FFEFEF;
   --color-blue: #0072F8;
 
+  --padding-container: 1.6rem;
+
 }
