--- a/src/css/components/_card.scss
+++ b/src/css/components/_card.scss
@@ -1,6 +1,17 @@
 .card-group {
   display: flex;
 
+  @include respond(tab-port) {
+    width: calc( 100% + var(--padding-container) * 2);
+    margin-left: calc(var(--padding-container) * -1);
+    padding: 0 var(--padding-container);
+    overflow: scroll;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &:not(:last-child) {
     margin-bottom: 2.4rem;
   }
@@ -18,14 +29,19 @@
     margin-right: 2.4rem;
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-image: linear-gradient(180deg, rgba(117, 117, 117, 0) 21.39%, #000000 90.9%);
+  &__link {
+    color: #fff;
+    display: inline-block;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-image: linear-gradient(180deg, rgba(117, 117, 117, 0) 21.39%, #000000 90.9%);
+    }
   }
 
   &__content {
